Бонусное задание выходного дня

--- a/index.html
+++ b/index.html
@@ -13,23 +13,14 @@
 </head>
 
 <body>
+	<h1>Привет <span id="username">Аноним</span></h1>
+	<button id="registerUser">Зарегистрировать пользователя</button>
+	<button id="login">Авторизоваться</button>
+	
+	<ul id="list">
 
-	<header class="header">
-		<form class="todo-control">
-			<label><input class="header-input" type="text" placeholder="Какие планы?"></label>
-			<button class="header-button" id="add"></button>
-		</form>
-	</header>
+	</ul>
 
-	<div class="todo-container">
-
-		<ul class="todo todo-list" id="todo">
-
-		</ul>
-		<ul class="todo todo-completed" id="completed">
-
-		</ul>
-	</div>
 
 	<script src="script/script.js"></script>
 </body>
